@@ -62,9 +62,9 @@ Section: net
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, debconf (>= 1.2.9) | debconf-2.0,
  poppler-utils | xpdf-utils, perl-modules, procps, 
- ghostscript, lsb-base (>= 3), cups-common,  
+ ghostscript, lsb-base (>= 3), cups-common, cups-client
  ssl-cert (>= 1.0.11), adduser, bc, ttf-freefont
-Recommends: cups-client, smbclient (>= 3.0.9), foomatic-filters (>= 4.0), cups-driver-gutenprint, avahi-utils
+Recommends: smbclient (>= 3.0.9), foomatic-filters (>= 4.0), cups-driver-gutenprint, avahi-utils
 Suggests: cups-bsd, foomatic-db-engine, foomatic-db,
  hplip, xpdf-korean | xpdf-japanese | xpdf-chinese-traditional | xpdf-chinese-simplified, 
  cups-pdf
